# rust-k8s-sample-controller

./: Cargo.toml  README.adoc
src/: main.rs
