[package]
name = "sample-controller"
version = "0.1.0"
authors = ["Stephen Connolly <stephen.alan.connolly@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4.11"
env_logger = "0.7.1"
failure = "0.1.7"
futures-timer = "3.0.1"
futures-util = "0.3.4"
futures = "0.3.4"
k8s-openapi = { version = "0.7.1", default-features = false, features = ["v1_15"] }
kube = "0.28.1"
kube-derive = "0.28.1"
log = "0.4.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "~0.8"
tokio = { version = "0.2", features = ["full"] }
